# srt_translator

./: .gitignore  LICENSE  README.md  setup.cfg  subtitles_translator.py
src/SrtTranslator/: __init__.py  __main__.py
