[metadata]
name = SrtTranslator-OmerAvci
version = 0.0.1
author = Omer Avci
author_email = omeravci@yahoo.com
description = SRT Translator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omeravcii/srt_translator
project_urls =
    Bug Tracker = https://github.com/omeravcii/srt_translator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    translators

[options.packages.find]
where = src